# pykp

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  pyproject.toml  setup.py  test.ipynb
.github/workflows/: continuous-delivery.yml  lint.yml  release.yml  ruff.yml  test.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: class.rst  method.rst  module.rst
docs/source/about/: index.rst
docs/source/contributing/: index.rst
docs/source/contributing/includes/: commit-messages.rst  detailed-reference.rst  development.rst  how-to-contribute.rst  linting.rst  quick-reference.rst  tests.rst
docs/source/installation/: index.rst
docs/source/installation/includes/: git-install.rst  pip-install.rst
docs/source/pykp/: arrangement.rst  index.rst  item.rst  knapsack.rst  sampler.rst
docs/source/quick-start/: index.rst
docs/source/reference/: index.rst
docs/source/usage/: index.rst
pykp/: __init__.py  arrangement.py  item.py  knapsack.py  metrics.py  sampler.py  solvers.py
pykp/knapsack/: __init__.py  _knapsack.py  _sampler.py
pykp/metrics/: __init__.py  _phase_transition.py  phase_transition.py  sahni_k.py
pykp/solvers/: __init__.py  _branch_and_bound.py  _greedy.py  _minizinc.py  _mzn_gecode.py  _solution.py  branch_and_bound.py  greedy.py  mzn_gecode.py
requirements/: build.txt  default.txt  dev.txt  doc.txt  test.txt
tests/: __init__.py  test_cases.json  test_knapsack.py  test_metrics.py  test_sampler.py  test_solvers.py
tools/: generate_requirements.py
(+8 files in other folders)
