[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pykp"
version = "1.0.0"
description = "Tooling for sampling and solving instances of the 0-1 Knapsack Problem."
authors = [
    { name = "Hassan Andrabi", email = "hrs.andrabi@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["knapsack", "optimisation", "sampling", "algorithms"]
classifiers = [
	"Intended Audience :: Science/Research",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.12",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Mathematics",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
	"anytree>=2.12.1", 
	"pandas>=2.2.3",
	"matplotlib==3.9.2",
	"numpy==2.1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "twine>=4.0.2", "build>=1.2.2.post1"]

[project.urls]
Homepage = "https://github.com/HRSAndrabi/pykp"
Documentation = "https://github.com/HRSAndrabi/pykp"
Repository = "https://github.com/HRSAndrabi/pykp"
Issues = "https://github.com/HRSAndrabi/pykp/issues"

